- Added WriteContent functionality - Added Global Error Handler

--- a/UI/Scholarly.Web/appsettings.json
+++ b/UI/Scholarly.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Scholarly": "data source=BULL;initial catalog=Scholarly;integrated security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "Scholarly": "data source=BULL\\BULL;initial catalog=Scholarly;integrated security=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   }
 }
